k8s/deployments/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartwebapi
  namespace: app
  labels:
    app: smartwebapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smartwebapi
  template:
    metadata:
      labels:
        app: smartwebapi
    spec:
      containers:
        - name: smartwebapi
          image: egzoticghost/smartwebapi:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: smartwebapi
  namespace: app
spec:
  selector:
    app: smartwebapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
