k8s/deployments/blazor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartapp
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smartapp
  template:
    metadata:
      labels:
        app: smartapp
    spec:
      containers:
      - name: smartapp
        image: egzoticghost/smartapp:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: smartapp
  namespace: app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: smartapp
