k8s/deployments/smartapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smartapp
  template:
    metadata:
      labels:
        app: smartapp
    spec:
      containers:
      - name: web
        image: smartapp:local
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: smartapp
spec:
  type: NodePort
  selector:
    app: smartapp
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30082
