k8s/deployments/smartwebapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartwebapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smartwebapi
  template:
    metadata:
      labels:
        app: smartwebapi
    spec:
      containers:
      - name: api
        image: smartwebapi:local
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: smartwebapi
spec:
  type: NodePort
  selector:
    app: smartwebapi
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30081
