k8s/deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartapp-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: smartapp.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: smartwebapi
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: smartapp
            port:
              number: 80
