k8s/deployments/smartwebapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartwebapi-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: smartwebapi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: smartwebapi
            port:
              number: 80
